# ocs

./: CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: release.yaml
crates/ocs-changelog/: Cargo.toml
crates/ocs-changelog/src/: main.rs
src/: arguments.rs  main.rs  message.rs  row_ext.rs  selection.rs  session.rs  session_item.rs  session_picker.rs  storage.rs  style.rs  time.rs
