[package]
name = "ocs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.2", features = ["derive"] }
ratatui = { version = "0.30.2", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
skim = { version = "5.1.3", default-features = false }

[dev-dependencies]
tempfile = "3.27.0"
