[package]
name = "ocs"
version = "0.1.0"
edition = "2024"

[lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
pedantic = { level = "deny", priority = -1 }
wildcard_imports = "allow"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.2", features = ["derive"] }
ratatui = { version = "0.30.2", default-features = false }
rusqlite = { version = "0.40.1", features = ["bundled"] }
skim = { version = "5.1.3", default-features = false }

[dev-dependencies]
tempfile = "3.27.0"
