[package]
name = "ocs"
version = "0.1.1"
description = "A session picker for OpenCode"
authors = ["Liam <liam@scalzulli.com>"]
license = "CC0-1.0"
homepage = "https://github.com/terror/ocs"
repository = "https://github.com/terror/ocs"
edition = "2024"
exclude = ["/screenshot.png"]
categories = ["command-line-utilities", "development-tools"]
keywords = ["opencode", "session", "picker", "fuzzy-finder", "terminal"]

[lints]
workspace = true

[workspace]
members = [".", "crates/*"]

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
pedantic = { level = "deny", priority = -1 }
wildcard_imports = "allow"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.2", features = ["derive"] }
ratatui = { version = "0.30.2", default-features = false }
rusqlite = { version = "0.40.1", features = ["bundled"] }
skim = { version = "5.1.3", default-features = false }

[dev-dependencies]
tempfile = "3.27.0"
